--- a/movie_recommendation/requirements.txt
+++ b/movie_recommendation/requirements.txt
@@ -1,159 +1,4 @@
-absl-py==2.3.0
-aiohttp
-altair
-appdirs==1.4.4
-attrs
-autopep8
-bcrypt
-beautifulsoup4
-black
-bleach
-bokeh
-cachetools
-certifi
-cffi
-chardet
-charset-normalizer
-click
-cloudpickle
-colorama
-contourpy
-cryptography
-cycler
-cytoolz
-dask
-debugpy
-decorator
-defusedxml
-dill
-distributed
-docutils
-et-xmlfile
-executing
-fastjsonschema
-filelock
-flake8
-Flask
-fonttools
-fsspec
-gast==0.6.0
-gensim
-google-pasta==0.2.0
-google_search_results==2.4.2
-grpcio==1.73.0
-h11
-h5py
-holoviews
-httpcore
-httpx
-hvplot
-idna
-imagecodecs
-imageio
-imbalanced-learn
-importlib-metadata
-inflection
-ipykernel
-ipython
-ipywidgets
-isort
-jedi
-Jinja2
-joblib
-jsonschema
-jupyter
-jupyterlab
-keras==3.10.0
-kiwisolver
-lazy-object-proxy
-libclang==18.1.1
-llvmlite
-lmdb
-lxml==5.2.1
-lz4
-Markdown
-markupsafe
-matplotlib==3.9.2
-mkl-service==2.4.0
-ml_dtypes==0.5.1
-more-itertools
-mpmath
-msgpack
-multidict
-multipledispatch
-mypy
-mypy-extensions
-namex==0.1.0
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx
-nltk
-notebook
-numba
-numexpr
-numpy
-numpydoc
-opencv-python==4.11.0.86
-openpyxl
-opt_einsum==3.4.0
-optree==0.16.0
-packaging
-pandas
-panel
-param
-parsel
-parso
-partd
-pathspec
-patsy
-pillow
-pkginfo
-platformdirs
-plotly
-pluggy
-protobuf==4.25.3
-psutil
-pure-eval
-py-cpuinfo
-pyasn1-modules==0.2.8
-pycodestyle
-pycparser
-pydeck
-pydocstyle
-pyerfa
-pyflakes
-Pygments
-PyJWT
-pylint
-PyNaCl
-pyodbc
-pyOpenSSL
-pyparsing
-PyQt5==5.15.10
-PyQtWebEngine==5.15.6
-PySocks
-pytest
-python-dateutil
-python-dotenv
-pytz
-pyviz_comms
-PyWavelets
-pywin32==305.1
-pyyaml
-pyzmq
-qtconsole
-QtAwesome
-QtPy
-regex
-requests
-requests-toolbelt
-rich
-rope
-rpds-py
-Rtree
-ruamel.yaml
-s3fs
-scikit-image
-scikit-learn
+Flask>=2.0.0
+numpy>=1.20.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
